--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"cssnano": "^4.0.5",
 		"extract-text-webpack-plugin": "^4.0.0-beta.0",
 		"lodash": "^4.17.10",
+		"moment": "^2.22.2",
 		"node-sass": "^4.9.2",
 		"normalize.css": "^8.0.0",
 		"postcss": "^7.0.2",
