--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
 		"node-sass": "^4.9.2",
 		"normalize.css": "^8.0.0",
 		"postcss": "^7.0.2",
-		"postcss-cssnext": "^3.1.0",
 		"postcss-import": "^12.0.0",
 		"postcss-loader": "^2.1.6",
 		"postcss-preset-env": "^5.3.0",
@@ -45,6 +44,11 @@
 		"babel-preset-es2015": "^6.24.1",
 		"babel-preset-react": "^6.24.1",
 		"babel-preset-stage-0": "^6.24.1",
+		"postcss-apply": "^0.11.0",
+		"postcss-each": "^0.10.0",
+		"postcss-mixins": "^6.2.0",
+		"postcss-nesting": "^6.0.0",
+		"postcss-reporter": "^5.0.0",
 		"prettier": "^1.13.7",
 		"react-router": "^4.3.1",
 		"react-router-dom": "^4.3.1",
