--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"dependencies": {
 		"autoprefixer": "^9.1.0",
+		"axios": "^0.18.0",
 		"babel-polyfill": "^6.26.0",
 		"classnames": "^2.2.6",
 		"css-loader": "^1.0.0",
